# aotlang

./: Cargo.toml  main.txt
src/: grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs
