[package]
name = "aot_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.2", features = ["llvm15-0"] }
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[dev-dependencies]
tempfile = "3.0"